# bag

./: .editorconfig  .gitignore  LICENSE.rst  MANIFEST.in  README.rst  README.txt  build_sphinx_documentation.sh  license.txt  pyproject.toml  release.sh  release_new_version.py  setup.cfg  setup.py  translate1.sh  translate2.sh  zip_sphinx_documentation.sh
bag/: __init__.py  bytes_box.py  check_rst.py  command.py  console.py  corrupt_image.py  csv.py  csv2.py  csv3.py  dump_mysql.py  email_validator.py  exceptions.py  file_existence_manager.py  file_id_manager.py  file_watcher.py  google_translator.py  html.py  log.py  memoize.py  monkeypatch.py  more_codecs.py  pathlib_complement.py  payload.py  percentage_done.py  reify.py  reorder_po.py  replace_many.py  sa.py  settings.py  show_progress.py  six.py  streams.py  subcommand.py  text.py  time.py
bag/git/: delete_old_branches.py
bag/locale/: bag.pot  main_mapping.conf
bag/locale/pt_BR/LC_MESSAGES/: bag.mo  bag.po
bag/spreadsheet/: __init__.py  csv.py  excel.py
bag/sqlalchemy/: __init__.py  context.py  created_changed.py  funcs.py  json_col.py  mediovaigel.py  models2yaml.py  sa.py  testing.py  tricks.py
bag/tests/: test_colander.py  test_email_validator.py  test_html.py  test_text.py  test_time.py  test_web_burla.py  test_web_deps.py  test_web_flash_msg.py  test_web_pyramid_flash_msg.py  test_web_pyramid_locale.py
bag/text/: __init__.py  hash.py  words.py
bag/web/: __init__.py  burla.py  exceptions.py  flash_msg.py  nav.py  page_deps.py  pyramid_genshi.py  pyramid_kajiki.py  pyramid_sqlalchemy.py  pyramid_starter.py  transecma.js  transecma.py  web_deps.py  xaja.js
bag/web/deform/: __init__.py  validators.py
bag/web/deform/templates/: checkbox.pt  form.pt  mapping_item.pt  password.pt  slug.pt  textarea.pt  textinput.pt
bag/web/jinja2/: bs-macros.jinja2
bag/web/pyramid/: __init__.py  angular_csrf.py  burla.py  cache_buster.py  deform.py  deform_view.py  documentation_styles.css  flash_msg.py  genshi.py  kajiki.py  locale.py  nav.py  plugins_manager.py  resources.py  robots.py  routes.py  sqlalchemy.py  starter.py  views.py
bag/web/pyramid/apps/: views.py
bag/web/pyramid/apps/contact/: __init__.py  contact.genshi
bag/web/pyramid/view/: __init__.py
bag/web/pyramid/view/contact/: __init__.py  contact.genshi
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
tests/: test_email_validator.py  test_html.py  test_spreadsheet.py  test_sqlalchemy_tricks.py  test_text.py  test_time.py  test_web_burla.py  test_web_deps.py  test_web_flash_msg.py  test_web_pyramid_locale.py
