[tool.poetry]
	name = "bag"
	version = "5.0.2.dev1"
	description = "A library for several purposes"
	readme = "README.rst"
	authors = ["Nando Florestan <nandoflorestan@gmail.com>"]
	license = "MIT"
	repository = "https://github.com/nandoflorestan/bag"
	documentation = "http://docs.nando.audio/bag/latest/"
	classifiers = [
		# https://pypi.org/pypi?:action=list_classifiers
		"Development Status :: 5 - Production/Stable",
		'Environment :: Console',
		"Environment :: Other Environment",
		"Intended Audience :: Developers",
		'License :: OSI Approved :: MIT License',
		"Operating System :: OS Independent",
		"Programming Language :: Python",
		"Programming Language :: Python :: 3",
		"Programming Language :: Python :: 3.9",
		"Programming Language :: Python :: 3.10",
		"Programming Language :: Python :: 3.11",
		'Programming Language :: Python :: Implementation :: CPython',
		'Programming Language :: Python :: Implementation :: PyPy',
		"Framework :: Pyramid",
		'Topic :: Database',
		"Topic :: Internet :: WWW/HTTP",
		'Topic :: Internet :: WWW/HTTP :: WSGI',
		'Topic :: Multimedia :: Graphics :: Graphics Conversion',
		"Topic :: Software Development :: Libraries :: Python Modules",
		'Topic :: Text Processing :: General',
	]
	# A list of keywords (max: 5) that the package is related to
	keywords = ["python", 'pyramid', 'sqlalchemy',]

[tool.poetry.dependencies]
	python = ">= 3.9"
	# https://python-poetry.org/docs/dependency-specification/
	polib = "*"
	argh = "*"

[tool.poetry.dev-dependencies]
	babel = "*"
	pyramid = "*"
	pytest = "*"
	pytz = "*"
	SQLAlchemy = "*"
	sphinx = "*"
	sphinx-autodoc-typehints = "*"

[tool.poetry.scripts]
	po2json = "bag.web.transecma:po2json_command"
	reorder_po = "bag.reorder_po:_command"
	check_rst = "bag.check_rst:command"
	delete_old_branches = "bag.git.delete_old_branches:_command"
	replace_many = "bag.replace_many:_command"

[tool.poetry.plugins."babel.extractors"]
	jquery_templates = "bag.web.transecma:extract_jquery_templates"

[build-system]
	requires = ["poetry-core>=1.0.0"]
	build-backend = "poetry.core.masonry.api"
